change test's permgen size